[metadata]
name = robotframework-rosgazebolibrary
version = 0.0.4
author = Niels Hoppe
author_email = niels.hoppe@fokus.fraunhofer.de
description = Keyword library for the Robot Framework for accessing ROS based systems and the Gazebo simulator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hielsnoppe/robotframework-rosgazebolibrary
project_urls =
    Bug Tracker = https://github.com/hielsnoppe/robotframework-rosgazebolibrary/issues
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Robot Framework :: Library
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    robotframework >=4.1.3
    roslibpy >=1.3.0

[options.packages.find]
where = src